# spotdl-gui

./: pyproject.toml
tests/: test_spotdl_gui.py
